dark mode desktop/mobile fix

--- a/src/components/Header/Burger/Burger.scss
+++ b/src/components/Header/Burger/Burger.scss
@@ -13,7 +13,7 @@
   .burger-line {
     width: 100%;
     height: 2px;
-    background-color: #000;
+    background-color: var(#{--iconsDefault});
     border-radius: 10px;
     transition: all 0.2s ease-out;
   }
