--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -42,14 +42,14 @@
 
   .mobileMenu {
     position: absolute;
-    background-color: #FFFFFF;
+    background-color: var(#{--bgPrimaryDefault});
     width: 80%;
     z-index: 1;
     top: calc(50% - -125px);
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 15px;
-    box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 10px 1px var(#{--boxShadowDefault});
   }
 
   @media (max-width: 991px) {
